--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python-telegram-bot==20.8 --upgrade --force-reinstall
+python-telegram-bot==20.8
 Flask==2.3.2
 gunicorn==20.1.0
 apscheduler==3.10.4
